# tools.tdep

./: .gitignore  .travis.yml  LICENSE  README.md  extract_forces_tdep  extract_positions_tdep  extrapolate_q  get_angular_momentum_tensors  linkall_tdep  plot_sqe.py  pyproject.toml  setup.cfg  tdep_compare_cells  tdep_create_sample_folders  tdep_extract_forces_aims  tdep_extrapolate_q  tdep_parse_aims  tdep_parse_aims_output  tdep_parse_aims_output_alt  tdep_plot_atomic_distribution  tdep_plot_dispersion  tdep_plot_distribution  tdep_plot_dos  tdep_plot_sqe  tdep_read_outcar  tdep_relax_structure  tdep_simplify_bec  tdep_take_N  tdep_write_poscar  write_positions_tdep
.github/workflows/: pytest.yml
scripts/: bak_extrapolate_q  tdep_compare_cells  tdep_create_sample_folders.py  tdep_extract_positions_aims  tdep_extrapolate_q  tdep_get_thermodynamics.py  tdep_ln_previous_samples.py  tdep_parse_aims.py  tdep_parse_output.py  tdep_plot_dispersion.py  tdep_plot_dos.py  tdep_plot_fc_norms.py  tdep_plot_sqe.py  tdep_plot_sqe_q.py  tdep_read_outcar  tdep_relax_cell.py  tdep_relax_structure  tdep_relax_structure.py  tdep_run_th  tdep_simplify_bec.py  tdep_write_poscar.py  unlinkall_tdep
tdeptools/: bfgs.py  brillouin.py  dimensions.py  dos.py  geometry.py  hdf5.py  helpers.py  infrared.py  io.py  keys.py  konstanter.py  kramers_kronig.py  physics.py  raman.py  sqe.py  thermodynamics.py
tdeptools/cli/: tdep_compute_raman_intensities.py  tdep_create_next_iteration.py  tdep_get_thermodynamics.py  tdep_ln_previous_samples.py  tdep_parse_output.py  tdep_parse_qe_ph.py  tdep_plot_fc_norms.py  tdep_read_outcar.py  tdep_write_phononwebsite_json.py
tdeptools/scripts/: ase_compare_structures.py  ase_geometry_info.py  ase_geometry_refine.py  ase_get_distance_table.py  ase_join_pw_ph.py  ase_match_lattices.py  ase_strain_sample.py  ase_suggest_kpoints.py  bak_2Dfit  bak_tdep_compute_ir_intensities.py  tdep_clean_sim_hdf5.py  tdep_compute_2pdos.py  tdep_compute_dos_convolutions.py  tdep_compute_ir_intensities.py  tdep_compute_raman_intensities.py  tdep_create_next_iteration.py  tdep_create_sample_folders.py  tdep_dispersion_gallery.py  tdep_displace_atoms.py  tdep_displace_modes.py  tdep_get_angular_momentum_tensor.py  tdep_get_thermodynamics.py  tdep_ln_previous_samples.py  tdep_parse_output.py  tdep_parse_qe_ph.py  tdep_plot_dos.py  tdep_plot_fc3_norms.py  tdep_plot_fc4_norms.py  tdep_plot_fc_norms.py  tdep_plot_phonon_self_energy.py  tdep_plot_sqe.py  tdep_read_lotosplitting_from_outcar.py  tdep_relax_cell.py  tdep_simplify_bec.py  tdep_write_phononwebsite_json.py
tests/unit/: test_bose_function_negative.py  test_kramers_kronig.py
