[metadata]
name = tdeptools
version = 0.0.2
author = "Florian Knoop"
url = "https://github.com/flokno/tools.tdep"
description = "Python tools for working with the TDEP method."
license = "ISC License"
classifiers =
    License :: OSI Approved :: ISC License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = tdeptools
install_requires =
	ase >= 3.21
	typer >= 0.4
	matplotlib >= 3.0
	xarray >= 0.18
	numpy >= 1.11
	scipy >= 1.5
	h5py >= 3.5
	seaborn >= 0.11
	rich >= 1.0
	pandas >= 1.0
	toml >= 0.10.1

[options.entry_points]
console_scripts =
	tdep_create_sample_folders = scripts.tdep_create_sample_folders:app
	tdep_create_next_iteration = scripts.tdep_create_next_iteration:app
	tdep_get_angular_momentum = scripts.tdep_get_angular_momentum_tensor:app
	tdep_get_thermodynamics = scripts.tdep_get_thermodynamics:app
	tdep_ln_previous_samples = scripts.tdep_ln_previous_samples :app
	tdep_parse_output = scripts.tdep_parse_output:app
	tdep_plot_dispersion = scripts.tdep_plot_dispersion:app
	tdep_plot_dos = scripts.tdep_plot_dos:app
	tdep_plot_fc_norms = scripts.tdep_plot_fc_norms:app
	# tdep_plot_pair_distribution = scripts.tdep_plot_pair_distribution:app
	tdep_plot_sqe = scripts.tdep_plot_sqe:app
	tdep_plot_sqe_q = scripts.tdep_plot_sqe_q:app
	tdep_read_outcar = scripts.tdep_read_outcar:app
	tdep_relax_cell = scripts.tdep_relax_cell:app
	tdep_simplify_bec = scripts.tdep_simplify_bec:app
	tdep_write_phononwebsite_json = scripts.tdep_write_phononwebsite_json:app
	tdep_write_poscar = scripts.tdep_write_poscar:app

[flake8]
max-complexity = 5
max-line-length = 90

[isort]
line_length=89
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
lines_after_imports=2
