[metadata]
name = tdeptools
version = 0.0.4
author = "Florian Knoop"
url = "https://github.com/flokno/tools.tdep"
description = "Python tools for working with the TDEP method."
license = "ISC License"
classifiers =
    License :: OSI Approved :: ISC License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
	ase >= 3.21
	typer >= 0.4
	matplotlib >= 3.0
	xarray >= 0.18
	numpy >= 1.11
	scipy >= 1.5
	h5py >= 3.5
	seaborn >= 0.11
	rich >= 1.0
	pandas >= 1.0
	toml >= 0.10.1

[options.packages.find]
include =
	tdeptools

[options.entry_points]
console_scripts =
	tdep_compute_raman_intensities = tdeptools.cli.tdep_compute_raman_intensities:app
	tdep_clean_sim_hdf5 = tdeptools.cli.tdep_clean_sim_hdf5:app
	tdep_create_sample_folders = tdeptools.cli.tdep_create_sample_folders:app
	tdep_create_next_iteration = tdeptools.cli.tdep_create_next_iteration:app
	tdep_get_angular_momentum = tdeptools.cli.tdep_get_angular_momentum_tensor:app
	tdep_get_thermodynamics = tdeptools.cli.tdep_get_thermodynamics:app
	tdep_ln_previous_samples = tdeptools.cli.tdep_ln_previous_samples :app
	# tdep_materials_fingerprint = tdeptools.cli.tdep_materials_fingerprint:app
	tdep_parse_qe_ph = tdeptools.cli.tdep_parse_qe_ph:app
	tdep_parse_output = tdeptools.cli.tdep_parse_output:app
	tdep_plot_dispersion = tdeptools.cli.tdep_plot_dispersion:app
	tdep_plot_dos = tdeptools.cli.tdep_plot_dos:app
	tdep_plot_fc_norms = tdeptools.cli.tdep_plot_fc_norms:app
	# tdep_plot_pair_distribution = tdeptools.cli.tdep_plot_pair_distribution:app
	tdep_plot_sqe = tdeptools.cli.tdep_plot_sqe:app
	tdep_plot_sqe_q = tdeptools.cli.tdep_plot_sqe_q:app
	tdep_read_outcar = tdeptools.cli.tdep_read_outcar:app
	tdep_relax_cell = tdeptools.cli.tdep_relax_cell:app
	# tdep_run = tdeptools.cli.tdep_run:app
	tdep_simplify_bec = tdeptools.cli.tdep_simplify_bec:app
	tdep_write_phononwebsite_json = tdeptools.cli.tdep_write_phononwebsite_json:app
	tdep_write_poscar = tdeptools.cli.tdep_write_poscar:app
