[metadata]
name = tdeptools
version = 0.0.5b
author = "Florian Knoop"
url = "https://github.com/flokno/tools.tdep"
description = "Python tools for working with the TDEP method."
license = "ISC License"
classifiers =
    License :: OSI Approved :: ISC License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
	ase >= 3.21
	typer >= 0.4
	matplotlib >= 3.0
	xarray[io] >= 0.18
	numpy >= 1.11
	scipy >= 1.5
	h5py >= 3.5
	seaborn >= 0.11
	rich >= 1.0
	pandas >= 1.0
	toml >= 0.10.1
	spglib >= 1.0

[options.packages.find]
include =
	tdeptools
	tdeptools.*

[options.entry_points]
console_scripts =
	ase_geometry_info = tdeptools.scripts.ase_geometry_info:app
	ase_geometry_refine = tdeptools.scripts.ase_geometry_refine:app
	ase_get_distance_table = tdeptools.scripts.ase_get_distance_table:app
	ase_join_pw_ph = tdeptools.scripts.ase_join_pw_ph:app
	ase_strain_sample = tdeptools.scripts.ase_strain_sample:app
	ase_suggest_kpoints = tdeptools.scripts.ase_suggest_kpoints:app
	tdep_compute_raman_intensities = tdeptools.scripts.tdep_compute_raman_intensities:app
	tdep_clean_sim_hdf5 = tdeptools.scripts.tdep_clean_sim_hdf5:app
	tdep_compute_ir_intensities = tdeptools.scripts.tdep_compute_ir_intensities:app
	tdep_create_sample_folders = tdeptools.scripts.tdep_create_sample_folders:app
	tdep_displace_modes = tdeptools.scripts.tdep_displace_modes:app
	tdep_create_next_iteration = tdeptools.scripts.tdep_create_next_iteration:app
	tdep_get_angular_momentum = tdeptools.scripts.tdep_get_angular_momentum_tensor:app
	tdep_get_thermodynamics = tdeptools.scripts.tdep_get_thermodynamics:app
	tdep_ln_previous_samples = tdeptools.scripts.tdep_ln_previous_samples:app
	# tdep_materials_fingerprint = tdeptools.scripts.tdep_materials_fingerprint:app
	tdep_parse_qe_ph = tdeptools.scripts.tdep_parse_qe_ph:app
	tdep_parse_output = tdeptools.scripts.tdep_parse_output:app
	tdep_plot_dispersion = tdeptools.scripts.tdep_plot_dispersion:app
	tdep_plot_dos = tdeptools.scripts.tdep_plot_dos:app
	tdep_plot_fc_norms = tdeptools.scripts.tdep_plot_fc_norms:app
	# tdep_plot_pair_distribution = tdeptools.scripts.tdep_plot_pair_distribution:app
	tdep_plot_sqe = tdeptools.scripts.tdep_plot_sqe:app
	tdep_plot_sqe_q = tdeptools.scripts.tdep_plot_sqe_q:app
	tdep_read_lotosplitting_from_outcar = tdeptools.scripts.tdep_read_lotosplitting_from_outcar:app
	tdep_relax_cell = tdeptools.scripts.tdep_relax_cell:app
	# tdep_run = tdeptools.scripts.tdep_run:app
	tdep_simplify_bec = tdeptools.scripts.tdep_simplify_bec:app
	tdep_write_phononwebsite_json = tdeptools.scripts.tdep_write_phononwebsite_json:app
	tdep_write_poscar = tdeptools.scripts.tdep_write_poscar:app
